--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^3.0.0",
-    "json2csv": "^6.0.0-alpha.2"
+    "json2csv": "^6.0.0-alpha.2",
+    "moment": "^2.29.4",
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   }
 }
